--- a/CLAM/plugins/spacialization/example-data/speakerLocalization.ui
+++ b/CLAM/plugins/spacialization/example-data/speakerLocalization.ui
@@ -16,11 +16,25 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_8" >
      <item>
-      <widget class="QSlider" name="InControl__AudioAmplifier__Gain" >
-       <property name="orientation" >
-        <enum>Qt::Vertical</enum>
-       </property>
-      </widget>
+      <layout class="QVBoxLayout" name="verticalLayout_33" >
+       <item>
+        <widget class="QSlider" name="InControl__AudioAmplifier__Gain" >
+         <property name="value" >
+          <number>4</number>
+         </property>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="spinBox" >
+         <property name="value" >
+          <number>4</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox" >
@@ -39,7 +53,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -63,7 +77,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_2" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___1" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___1" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -87,7 +101,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_3" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___2" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___2" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -111,7 +125,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_4" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___3" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___3" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -139,7 +153,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_5" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___4" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___4" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -163,7 +177,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_6" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___5" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___5" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -187,7 +201,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_7" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___6" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___6" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -211,7 +225,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_8" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___7" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___7" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -239,7 +253,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_9" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___8" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___8" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -263,7 +277,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_10" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___9" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___9" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -287,7 +301,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_11" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___10" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___10" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -311,7 +325,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_12" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___11" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___11" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -339,7 +353,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_13" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___12" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___12" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -363,7 +377,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_14" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___13" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___13" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -387,7 +401,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_15" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___14" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___14" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -411,7 +425,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_16" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___15" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___15" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -439,7 +453,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_17" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___16" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___16" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -463,7 +477,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_18" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___17" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___17" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -487,7 +501,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_19" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___18" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___18" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -511,7 +525,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_20" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___19" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___19" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -539,7 +553,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_21" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___20" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___20" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -563,7 +577,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_22" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___21" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___21" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -587,7 +601,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_23" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___22" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___22" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -611,7 +625,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_24" >
             <item>
-             <widget class="Oscilloscope" native="1" name="OutPort__AudioAmplifier__Audio___Output___23" >
+             <widget class="Oscilloscope" name="OutPort__AudioAmplifier__Audio___Output___23" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
                 <horstretch>0</horstretch>
@@ -635,6 +649,8 @@
          </layout>
         </item>
        </layout>
+       <zorder>layoutWidget</zorder>
+       <zorder>spinBox</zorder>
       </widget>
      </item>
      <item>
@@ -652,7 +668,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_26" >
           <item>
-           <widget class="Oscilloscope" native="1" name="OutPort__1__AudioOut" >
+           <widget class="Oscilloscope" name="OutPort__1__AudioOut" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
               <horstretch>0</horstretch>
@@ -676,7 +692,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_27" >
           <item>
-           <widget class="Oscilloscope" native="1" name="OutPort__2__AudioOut" >
+           <widget class="Oscilloscope" name="OutPort__2__AudioOut" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
               <horstretch>0</horstretch>
@@ -700,7 +716,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_29" >
           <item>
-           <widget class="Oscilloscope" native="1" name="OutPort__3__AudioOut" >
+           <widget class="Oscilloscope" name="OutPort__3__AudioOut" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
               <horstretch>0</horstretch>
@@ -724,7 +740,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_28" >
           <item>
-           <widget class="Oscilloscope" native="1" name="OutPort__4__AudioOut" >
+           <widget class="Oscilloscope" name="OutPort__4__AudioOut" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
               <horstretch>0</horstretch>
@@ -748,7 +764,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_30" >
           <item>
-           <widget class="Oscilloscope" native="1" name="OutPort__LoopBack__AudioOut" >
+           <widget class="Oscilloscope" name="OutPort__LoopBack__AudioOut" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="MinimumExpanding" hsizetype="MinimumExpanding" >
               <horstretch>0</horstretch>
@@ -850,6 +866,38 @@
     <hint type="destinationlabel" >
      <x>855</x>
      <y>631</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>InControl__AudioAmplifier__Gain</sender>
+   <signal>sliderMoved(int)</signal>
+   <receiver>spinBox</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>21</x>
+     <y>389</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>35</x>
+     <y>633</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>spinBox</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>InControl__AudioAmplifier__Gain</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>21</x>
+     <y>640</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>19</x>
+     <y>490</y>
     </hint>
    </hints>
   </connection>
